--- a/libwdi/.msvc/libwdi_static.vcxproj
+++ b/libwdi/.msvc/libwdi_static.vcxproj
@@ -100,6 +100,7 @@ embedder embedded.h</Command>
     </ResourceCompile>
     <Lib>
       <OutputFile>$(OutDir)libwdi.lib</OutputFile>
+      <AdditionalOptions>/BREPRO %(AdditionalOptions)</AdditionalOptions>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -122,6 +123,7 @@ embedder embedded.h</Command>
     </ResourceCompile>
     <Lib>
       <OutputFile>$(OutDir)libwdi.lib</OutputFile>
+      <AdditionalOptions>/BREPRO %(AdditionalOptions)</AdditionalOptions>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -143,6 +145,7 @@ embedder embedded.h</Command>
     </ResourceCompile>
     <Lib>
       <OutputFile>$(OutDir)libwdi.lib</OutputFile>
+      <AdditionalOptions>/BREPRO %(AdditionalOptions)</AdditionalOptions>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -164,6 +167,7 @@ embedder embedded.h</Command>
     </ResourceCompile>
     <Lib>
       <OutputFile>$(OutDir)libwdi.lib</OutputFile>
+      <AdditionalOptions>/BREPRO %(AdditionalOptions)</AdditionalOptions>
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
